--- a/TodoApp-with-MongoDB/client/public/index.html
+++ b/TodoApp-with-MongoDB/client/public/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
-
+    <script src="https://kit.fontawesome.com/10341b6ea1.js" crossorigin="anonymous"></script>
   </body>
 </html>
